<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_ligth"
    android:orientation="vertical"
    tools:context=".presentation.ui.fragments.characters.filter.CharacterFilter">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title_filter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_status"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/group_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/alive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_chip_alive"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/dead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_chip_dead"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_chip_unknown"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/title_gender"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/group_gender"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_male"
                style="@style/CostumRadioButton"
                android:layout_marginStart="0dp"
                android:background="@drawable/checkbox_male_selector"
                android:text="@string/txt_checkbox_male" />

            <RadioButton
                android:id="@+id/btn_female"
                style="@style/CostumRadioButton"
                android:background="@drawable/checkbox_female_selector"
                android:text="@string/txt_checkbox_female" />

            <RadioButton
                android:id="@+id/btn_genderless"
                style="@style/CostumRadioButton"
                android:background="@drawable/checkbox_genderless_selector"
                android:text="@string/txt_checkbox_genderless" />

            <RadioButton
                android:id="@+id/btn_unknown"
                style="@style/CostumRadioButton"
                android:background="@drawable/checkbox_unknown_selector"
                android:text="@string/txt_checkbox_unknown" />
        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_make_filter"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button"
        android:text="@string/title_btn_apply"
        android:textColor="@color/black"
        app:backgroundTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button"
        android:text="@string/reset"
        android:textColor="@color/black"
        app:backgroundTint="@null" />

</LinearLayout>





