<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_ligth"
    tools:context=".presentation.ui.fragments.characters.detail.CharacterDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:background="@drawable/painel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003">


        <ImageView
            android:id="@+id/img_image"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:src="@drawable/imgchar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.4"/>

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textStyle="normal"
            app:layout_constraintLeft_toRightOf="@id/hint_name"
            app:layout_constraintBottom_toTopOf="@id/txt_status"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/hint_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/img_image"
            app:layout_constraintBottom_toTopOf="@id/txt_status" />

        <ImageView
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:src="@drawable/dead"
            app:layout_constraintBottom_toBottomOf="@id/hint_status"
            app:layout_constraintLeft_toRightOf="@id/hint_status"
            app:layout_constraintRight_toLeftOf="@id/txt_status" />


        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:textSize="15sp"
            android:text="Status"
            android:textColor="@color/white"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@id/hint_status"
            app:layout_constraintLeft_toRightOf="@id/hint_status"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/hint_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/status"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/hint_name"
            app:layout_constraintBottom_toTopOf="@id/hint_Species"/>

        <TextView
            android:id="@+id/txt_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:textStyle="normal"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/hint_gender"
            app:layout_constraintLeft_toRightOf="@id/hint_Species"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/hint_Species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/species"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/txt_gender"
            app:layout_constraintLeft_toLeftOf="@id/hint_status" />

        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/hint_gender"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/hint_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/hint_Species" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>